# starfall

./: .gitignore  README.md  pyproject.toml
docs/: PERFORMANCE-TRACKING.md  TOOLS.md
k8s/develop/test-resources/: demo-apps.yaml  ns.yaml
src/starfall/: crew.py  main.py  pydantic_models.py
src/starfall/config/: agents.yaml  agents.yaml.bk  tasks.yaml  tasks.yaml.bk
src/starfall/config/k8s_scanner/: agents.yaml  tasks.yaml
src/starfall/config/latest_dersion_discovery/: agents.yaml  tasks.yaml
src/starfall/tools/: k8s_scanner.py
