[project]
name = "starfall"
version = "0.1.0"
description = "starfall using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
starfall = "starfall.main:run"
run_crew = "starfall.main:run"
train = "starfall.main:train"
replay = "starfall.main:replay"
test = "starfall.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
